--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gato",
+  "homepage": "https://luismonroy.dev/",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
